--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -40,7 +40,7 @@ body, html {
   font-size: 1.8rem;
   font-weight: 700;
   margin: 0;
-  background: linear-gradient(90deg, #3e3be5, #6f6be8);
+  background: linear-gradient(90deg, #00df9a, #38b2ac);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
